--- a/tex/appendix_results7tev_table.tex
+++ b/tex/appendix_results7tev_table.tex
@@ -1,6 +1,106 @@
 
+\begin{table}[!htbp]\centering
+\begin{tabular}{l c c c c c}
+\toprule
+ &\multicolumn{5}{c}{$\mttbar{}$ ~[\GeV]} \\
+Source of systematic uncertainty           &         $0$--$420$ & $420$--$500$      & $500$--$600$         & $600$--$750$      &   $>750$ \\
+\midrule
+Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$  \\
+Lepton energy scale and resolution                & 0.017 & 0.014 & 0.013 & 0.007 & $<0.005$ \\
+Jet energy scale and resolution                   & 0.014 & 0.007 & 0.035 & 0.032 & 0.017 \\
+Missing transverse momentum and pile--up modelling & 0.013 & 0.017 & 0.018 & 0.008 & 0.005 \\
+Multi--jets background normalisation    & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+PDF                                     & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+\midrule
+Statistical uncertainty                    & 0.054             &        0.042      &        0.046      &       0.052       &         0.054     \\
+\bottomrule
+\end{tabular}
+\caption{}
+\label{table:Systematics_mtt}
+\end{table}
+
+\begin{table}[!htbp]\centering
+\begin{tabular}{l c c c}
+\toprule
+ &\multicolumn{3}{c}{$\ptttbar{}$ ~[\GeV]} \\
+Source of systematic uncertainty           &    $0$--$25$           &        $25$--$60$         &  $>60$    \\
+\midrule
+Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ \\
+Lepton energy scale and resolution                & 0.011 & 0.013 & 0.006   \\
+Jet energy scale and resolution                   & 0.009 & 0.020 & 0.020   \\
+Missing transverse momentum and pile--up modelling & 0.017 & 0.010 & $<0.005$ \\
+Multi--jets background normalisation    & $<0.005$ & $<0.005$ & $<0.005$  \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$  \\
+Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$  \\
+Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$  \\
+Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$  \\
+PDF                                     & $<0.005$ & $<0.005$ & $<0.005$  \\
+$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$  \\
+\midrule
+Statistical uncertainty                 & 0.052                &        0.057      &        0.034     \\
+\bottomrule
+\end{tabular}
+\caption{}
+\label{table:Systematics_pttt}
+\end{table}
+
+\begin{table}[!htbp]\centering
+\begin{tabular}{l c c c}
+\toprule
+ & \multicolumn{3}{c}{$\yttbar{}$}    \\
+Source of systematic uncertainty           &    $0$--$0.3$          &        $0.3$--$0.7$     &  $>0.7$   \\
+\midrule
+Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ \\
+Lepton energy scale and resolution                & 0.022 & 0.014 & 0.008   \\
+Jet energy scale and resolution                   & 0.013 & 0.007 & $<0.005$   \\
+Missing transverse momentum and pile--up modelling & $<0.005$ & 0.006 & $<0.005$ \\
+Multi--jets background normalisation    & $<0.005$ & $<0.005$ & $<0.005$  \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$  \\
+Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$  \\
+Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$  \\
+Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$  \\
+PDF                                     & $<0.005$ & $<0.005$ & $<0.005$  \\
+$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$  \\
+\midrule
+Statistical uncertainty                 & 0.042                &        0.030      &        0.025     \\
+\bottomrule
+\end{tabular}
+\caption{}
+\label{table:Systematics_ytt}
+\end{table}
+
+\begin{table}[!htbp]\centering
+\begin{tabular}{l c c c c c}
+\toprule
+ &\multicolumn{5}{c}{$\mttbar{}$ ~[\GeV] for $\beta_{z,\ttbar} > 0.6$}    \\
+Source of systematic uncertainty           &         $0$--$420$ & $420$--$500$      & $500$--$600$         & $600$--$750$      &   $>750$ \\
+\midrule
+Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$  \\
+Lepton energy scale and resolution                & 0.021 & 0.033 & 0.039 & 0.024 & 0.015 \\
+Jet energy scale and resolution                   & 0.014 & 0.026 & 0.061 & 0.095 & 0.111 \\
+Missing transverse momentum and pile--up modelling & 0.019 & 0.030 & 0.032 & 0.019 & 0.011 \\
+Multi--jets background normalisation    & 0.007 & $<0.005$ & $<0.005$ & $<0.005$ & 0.017 \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+PDF                                     & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & 0.010 \\
+\midrule
+Statistical uncertainty                    & 0.078             &        0.070      &        0.074      &       0.098       &         0.131     \\
+\bottomrule
+\end{tabular}
+\caption{}
+\label{table:Systematics_mtt_beta}
+\end{table}
+
+
 \begin{table}[!htp]\centering
-\caption{ }
 \begin{tabular}{l c c c }
   \toprule
   &\multicolumn{3}{c}{$\pttt{}~[\rm{GeV}]$}    \\
@@ -11,11 +111,11 @@
   $>60$           &           &             &   $1$     \\
   \bottomrule
 \end{tabular}
+\caption{ }
 \label{tab:corr_pttt}
 \end{table}
 
 \begin{table}[!htp]\centering
-\caption{ }
 \begin{tabular}{l c c c }
   \toprule
   &\multicolumn{3}{c}{$\ytt{}$}    \\
@@ -26,11 +126,11 @@
   $>0.7$        &         &            &   $1$      \\
   \bottomrule
 \end{tabular}
+\caption{ }
 \label{tab:corr_ytt}
 \end{table}
 
 \begin{table}[!htp]\centering
-\caption{ }
 \begin{tabular}{l c c c c c }
   \toprule
   &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$ for $\betatt{}> 0.6$}    \\
@@ -43,5 +143,6 @@
   $>750$          &     &         &         &         & $1$     \\
   \bottomrule
 \end{tabular}
+\caption{ }
 \label{tab:corr_mtt_beta}
 \end{table}
