--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion}
+\chapter{Conclusions and Outlook}
 \label{sec:conclusion}
 
 Measurements of the asymmetry in the production of top quark pairs at
@@ -7,6 +7,8 @@ corresponding to an integrated luminosity of $4.7 \ifb{}$ taken over
 the course of 2011 at a centre-of-mass energy \seventev{} and a
 dataset corresponding to an integrated luminosity of $20 \ifb{}$
 taken over the course of 2012 at a centre-of-mass energy \eighttev{}.
+This represents the full dataset collected by ATLAS over the course of
+LHC Run 1.
 
 The lepton+jets signature of the semileptonic \ttbar{} decay has been
 exploited to select samples enriched in \ttbar{} events by identifying
@@ -37,7 +39,7 @@ response in distributions for which the corresponding parton--level
 asymmetry is known.
 
 In the \seventev{} dataset, the asymmetry \ac{} has been measured
-inclusively, as a function of \mtt{}, \pttt{} and \ytt{}, and has been found
+inclusively and differentially as a function of \mtt{}, \pttt{} and \ytt{}, and has been found
 to be compatible with the SM predictions in all cases. The inclusive
 measurement and the one as a function of \mtt{} have also been performed in
 a $\qqbar{}\to\ttbar{}$ enriched sample ($\betatt{}>0.6$), yielding
@@ -45,27 +47,30 @@ SM--compatible results as well. The precision of both inclusive and
 differential measurements is limited by the statistical uncertainty,
 while the largest systematic uncertainties are the ones with a large
 impact on the acceptance for asymmetric backgrounds (\wjets{} and
-single top), such as the uncertainty on the energy scale and
+single top production), such as the uncertainty on the energy scale and
 resolution of jets and leptons.
 In the \eighttev{} dataset, the asymmetry \ac{} has been measured
-inclusively and as a function of \mtt{}; in both case the results are
+inclusively and differentially as a function of \mtt{}; in both cases the results are
 compatible with the SM predictions. The set of measurements will be
 completed to match the \seventev{} set, with the differential
 measurement as a function of \pttt{} and measurements in the
 \qqbar{}--enriched sample with $\betatt{}>0.6$.
 Both sets of measurements are the most precise to date at the LHC,
-reaching a precision of 0.6\% in the case of the inclusive measurement
+reaching an absolute precision of 0.6\% in the case of the inclusive measurement
 at \eighttev{}. The high precision is necessary in order to have
 sensitivity to the small deviations expected from new physics effects.
 At this stage the asymmetry measurements at LHC do not show
-significant deviations from the SM predictions.
+significant deviations from the SM predictions, although they are also
+consistent with new physics scenarios that explain the Tevatron
+anomaly and the SM--like \ac{} measurements at the LHC.
 
 The precision of these measurements will be critical to significantly
 constrain possible models of new physics that would be consistent with
 the excess at the Tevatron and the lack of a significant deviation at
 the LHC. A combination of ATLAS and CMS results has been performed at
-\seventev{}, where this measurement drives the overall precision, and
-is foreseen for the \eighttev{} results.
+\seventev{}, where this measurement drives the overall precision. A
+combination of measurements from ATLAS and CMS is also foreseen for
+the results at \eighttev{}.
 Due to the different initial state and subsequently different
 asymmetry definitions, a direct comparison with the anomaly reported
 at Tevatron cannot be performed. One important step would be to
